<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_white"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp" >

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/item_marginLeft"
            android:src="@drawable/btn_mine_back_selector" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/mine_shezhi"
            android:textColor="@color/txt_color"
            android:textSize="19sp" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="14dp"
        android:background="#dcdcdc" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#FFFFFF" />

    <RelativeLayout
        android:id="@+id/rl_infofeedback"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/bg_mine_itemtwo_selector" >

        <TextView
            style="@style/tv_mine"
            android:layout_marginLeft="10dp"
            android:text="@string/mine_infofeedback"
            android:textSize="18sp" />

        <ImageView style="@style/iv" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_addnumber"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="@drawable/bg_mine_itemone__selector" >

        <TextView
            style="@style/tv_mine"
            android:layout_marginLeft="10dp"
            android:text="@string/mine_addnumber"
            android:textSize="18sp" />

        <ImageView style="@style/iv" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_changephonenumber"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="@drawable/bg_mine_itemone__selector" >

        <TextView
            android:id="@+id/tv_changephonenumber"
            style="@style/tv_mine"
            android:layout_marginLeft="10dp"
            android:text="@string/mine_changephonenumber"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_phonenumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="120dp"
            android:layout_toRightOf="@id/tv_changephonenumber" />

        <ImageView style="@style/iv" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_aboutus"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="@drawable/bg_mine_itemone__selector" >

        <TextView
            style="@style/tv_mine"
            android:layout_marginLeft="10dp"
            android:text="@string/mine_aboutus"
            android:textSize="18sp" />

        <ImageView style="@style/iv" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center" >

        <LinearLayout
            android:id="@+id/li_quit"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            
            android:gravity="center" >

            <Button
                android:id="@+id/bt_quit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/mine_quit"
                android:textColor="@color/txt_color"
                android:textSize="16sp"
                android:background="@drawable/bg_mine_itemtwo_selector"
              />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>