<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_white"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp" >

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/item_marginLeft"
            android:src="@drawable/btn_mine_back_selector" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/infofeedback"
            android:textColor="@color/txt_color"
            android:textSize="19sp" />

        <Button
            android:id="@+id/bt_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/item_marginLeft"
            android:text="@string/infosend"
            android:textColor="@color/bag_pay" 
            android:textSize="14sp"
            android:background="@android:color/transparent"
            />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="14dp"
        android:background="#dcdcdc"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#FFFFFF" />

    <EditText
        
        android:id="@+id/et_infomationfeed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="11dp"
        android:layout_marginTop="9dp"
        android:textColorHint="@color/feedback"
        android:background="@android:color/transparent"
        android:hint="@string/info"
        android:textSize="14sp" />

</LinearLayout>