<?xml version="1.0" encoding="utf-8"?>
<!-- 车牌卡 -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_white"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp" >

        <Button
            android:id="@+id/bt_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/item_marginLeft"
            android:background="@android:color/transparent"
            android:text="@string/cancel"
            android:textColor="@color/cancel"
            android:textSize="16dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/carcard"
            android:textColor="@color/txt_color"
            android:textSize="19dp" />

        <Button
            android:id="@+id/bt_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/item_marginLeft"
            android:background="@android:color/transparent"
            android:text="@string/cardsave"
            android:textColor="@color/bag_pay"
            android:textSize="16dp" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="14dp"
        android:background="#dcdcdc" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#FFFFFF" />

    <RelativeLayout
        android:id="@+id/rl_carnumber"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/bg_mine_itemtwo_selector" >

        <EditText
            android:id="@+id/tv_card"
            style="@style/tv_mine"
            android:layout_marginLeft="10dp"
            android:background="@android:color/transparent"
            android:hint="请输入您的车牌号"
            android:textSize="16dp" />
    </RelativeLayout>

</LinearLayout>