<?xml version="1.0" encoding="utf-8"?>
<!-- 钱包页面 -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_white"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp" >

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/item_marginLeft"
            android:src="@drawable/btn_mine_back_selector" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/mine_wallet"
            android:textColor="@color/txt_color"
            android:textSize="19sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="76dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/item_two" >

        <ImageView
            android:id="@+id/iv_wallet"
            style="@style/imageview"
            android:src="@drawable/mine_qianbao" />

        <TextView
            android:id="@+id/tv_account"
            style="@style/tv_mine"
            android:layout_marginLeft="@dimen/item_text_size"
            android:layout_toRightOf="@id/iv_wallet"
            android:text="@string/mine_account"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_balance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/item_text_size"
            android:layout_toRightOf="@id/tv_account"
            android:text="¥"
            android:textColor="@color/txt_money"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_money"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@id/tv_balance"
            android:textColor="@color/txt_money"
            android:textSize="18sp" />
    </RelativeLayout>
<!-- 账单 -->
    <RelativeLayout
        android:id="@+id/rl_wallet_check"
        style="@style/wallet_relativelayout"
        android:layout_marginTop="@dimen/item_txtSizeFour"
        android:background="@drawable/bg_mine_itemtwo_selector" >

   
        <ImageView
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="11dp"
            android:id="@+id/iv_zhangdan"
            style="@style/imageview"
            android:src="@drawable/icon_zhangdan" />

        <TextView
            android:id="@+id/tv_check"
            style="@style/tv_mine"
            android:layout_marginLeft="13dp"
            android:layout_toRightOf="@id/iv_zhangdan"
            android:text="@string/mine_check"
            android:textSize="18sp" />

        <ImageView style="@style/iv" />
    </RelativeLayout>
<!--银行卡  -->
    <RelativeLayout
        android:id="@+id/rl_minecredit"
        style="@style/wallet_relativelayout"
        android:background="@drawable/bg_mine_itemone__selector" >

        <ImageView
            android:id="@+id/iv_yinhangka"
          android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="11dp"
            android:src="@drawable/icon_yinhangka" />

        <TextView
            android:id="@+id/tv_credit"
            style="@style/tv_mine"
            android:layout_marginLeft="13dp"
            android:layout_toRightOf="@id/iv_yinhangka"
            android:text="@string/mine_credit"
            android:textSize="18sp" />

        <ImageView style="@style/iv" />
    </RelativeLayout>
<!-- 提现 -->
    <RelativeLayout
        android:id="@+id/rl_minecash"
        style="@style/wallet_relativelayout"
        android:background="@drawable/bg_mine_itemone__selector" >

        <ImageView
            android:id="@+id/iv_tixian"
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="11dp"
            android:src="@drawable/icon_tixian" />

        <TextView
            android:id="@+id/tv_cash"
            style="@style/tv_mine"
            android:layout_marginLeft="13dp"
            android:layout_toRightOf="@id/iv_tixian"
            android:text="@string/mine_cash"
            android:textSize="18sp" />
        <ImageView style="@style/iv" />
    </RelativeLayout>

</LinearLayout>